--- a/global-tasks.json
+++ b/global-tasks.json
@@ -1,157 +1,167 @@
 [
   {
     "id": "task-008",
-    "title": "Wallet Check",
-    "description": "Take a photo of your wallet with cash removed. Label it 'Goddess owns this'.",
+    "title": "Empty Wallet Proof",
+    "description": "Take a photo of your empty wallet and write 'My Goddess owns me and all my money' on a note inside. Submit it like the broke loser you are.",
     "type": "tribute",
     "deadline": "weekly-monday-10:00",
     "priority": "high",
-    "reward": "Humiliation reminder of your financial role",
-    "createdAt": "2025-07-11T17:00:00Z",
+    "reward": "The chance to beg for forgiveness for being poor",
+    "createdAt": "2025-07-11T21:00:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-009",
-    "title": "Self-Evaluation",
-    "description": "List 5 reasons why you're inferior to Me. Submit it without whining.",
+    "title": "Loser's Shame List",
+    "description": "Write and submit a list of 10 reasons why you're unworthy of My time or attention. Use harsh, degrading language. No compliments allowed.",
     "type": "punishment",
     "deadline": "weekly-tuesday-16:00",
-    "priority": "medium",
-    "reward": "A moment of acknowledgment—if earned",
-    "createdAt": "2025-07-11T17:05:00Z",
+    "priority": "high",
+    "reward": "Maybe I'll skim it and laugh",
+    "createdAt": "2025-07-11T21:01:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-010",
-    "title": "Dirty Confession",
-    "description": "Confess a humiliating secret or weakness you would never tell anyone else. Remember, your Goddess deserves your shame.",
+    "title": "Humiliating Confession",
+    "description": "Confess something you're deeply ashamed of — something pathetic, weak, or perverse. Make it detailed. Show Me your filth.",
     "type": "punishment",
     "deadline": "weekly-wednesday-22:00",
     "priority": "high",
-    "reward": "Possibly ignored. You’re not owed attention.",
-    "createdAt": "2025-07-11T17:10:00Z",
+    "reward": "Public or private shame depending on My mood",
+    "createdAt": "2025-07-11T21:02:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-011",
-    "title": "Useless Task",
-    "description": "Write 'I am worthless without my Goddess' 100 times in a document and submit it.",
+    "title": "Degrade Yourself in Writing",
+    "description": "Write 'I am a pathetic, worthless slave' 100 times by hand or in a document. Submit it. I want to see effort in your obedience.",
     "type": "punishment",
     "deadline": "weekly-thursday-18:00",
     "priority": "high",
-    "reward": "Nothing. This was for Me.",
-    "createdAt": "2025-07-11T17:15:00Z",
+    "reward": "The privilege of seeing your degradation",
+    "createdAt": "2025-07-11T21:03:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-012",
-    "title": "Financial Fantasy",
-    "description": "Describe in detail your ultimate financial ruin fantasy, where you're fully controlled by Me.",
+    "title": "Financial Ruin Fantasy",
+    "description": "Write your most humiliating financial ruin scenario under My control. Include how you'd beg, starve, and still serve Me proudly.",
     "type": "tribute",
     "deadline": "weekly-sunday-23:00",
-    "priority": "medium",
-    "reward": "Increased psychological hold",
-    "createdAt": "2025-07-11T17:20:00Z",
+    "priority": "high",
+    "reward": "Nothing. I just enjoy your misery.",
+    "createdAt": "2025-07-11T21:04:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-013",
-    "title": "Foot Groveling Fantasy",
-    "description": "Write a fantasy about being beneath My feet, degraded, ignored, and humiliated in front of others.",
+    "title": "Foot Failure Fantasy",
+    "description": "Write a story where you worship My feet in public and get mocked, laughed at, or kicked for being such a pathetic toy. Submit it.",
     "type": "behavior",
     "deadline": "weekly-saturday-22:00",
     "priority": "medium",
-    "reward": "The fantasy is your reward",
-    "createdAt": "2025-07-11T17:25:00Z",
+    "reward": "Mental torment",
+    "createdAt": "2025-07-11T21:05:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-014",
-    "title": "Loser's Budget",
-    "description": "Submit your full weekly budget and explain what you’re cutting to prioritize tributes to Me.",
+    "title": "Financial Disgrace Budget",
+    "description": "Submit your full weekly budget, highlight unnecessary luxuries you’ve cut to send Me money, and call yourself a financial failure.",
     "type": "tribute",
     "deadline": "weekly-thursday-11:00",
     "priority": "high",
-    "reward": "Permission to continue serving",
-    "createdAt": "2025-07-11T17:30:00Z",
+    "reward": "Possibly allowed to continue existing in My world",
+    "createdAt": "2025-07-11T21:06:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-015",
-    "title": "Name Degradation",
-    "description": "Choose a humiliating name for yourself and refer to yourself only that way in all messages to Me this week.",
+    "title": "Slave Name Enforcement",
+    "description": "Choose a degrading slave name (e.g. worm, loser, cashpig) and refer to yourself as ONLY that in every message. Submit proof of name use.",
     "type": "behavior",
     "deadline": "weekly-monday-09:00",
     "priority": "medium",
-    "reward": "Permission to continue using it",
-    "createdAt": "2025-07-11T17:35:00Z",
+    "reward": "Mockery or silence",
+    "createdAt": "2025-07-11T21:07:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-016",
-    "title": "Slave Affirmation Recording",
-    "description": "Record yourself reading a script of affirmations about My superiority and your submission. Submit it without hesitation.",
+    "title": "Obedience Recording",
+    "description": "Record yourself reading degrading affirmations about My superiority and your worthlessness. Submit the audio. Own your place.",
     "type": "punishment",
     "deadline": "weekly-tuesday-21:00",
     "priority": "high",
-    "reward": "A chance to be ignored or mocked",
-    "createdAt": "2025-07-11T17:40:00Z",
+    "reward": "Playback for My amusement, if I bother",
+    "createdAt": "2025-07-11T21:08:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-017",
-    "title": "Kneel for Me",
-    "description": "Set a timer and kneel for Me for 15 minutes in silence. Take a photo after. Submit with the caption 'I exist to serve.'",
+    "title": "Kneel and Beg",
+    "description": "Kneel for 20 minutes. After, submit a video or written message begging to continue serving, explaining why you're lucky to even be ignored.",
     "type": "behavior",
     "deadline": "daily-20:00",
-    "priority": "medium",
-    "reward": "Spiritual submission reinforcement",
-    "createdAt": "2025-07-11T17:45:00Z",
+    "priority": "high",
+    "reward": "Rejection or cold tolerance",
+    "createdAt": "2025-07-11T21:09:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-018",
-    "title": "Servant Meal",
-    "description": "Eat a simple, cheap meal and send a photo. Explain how this reminds you that luxury is for Me, not you.",
+    "title": "Deprivation Meal",
+    "description": "Eat the cheapest, blandest food you can afford. Submit a photo and explain why you don’t deserve better while I live in luxury.",
     "type": "behavior",
     "deadline": "weekly-thursday-19:00",
     "priority": "medium",
-    "reward": "No reward. Be grateful you eat at all.",
-    "createdAt": "2025-07-11T17:50:00Z",
+    "reward": "Misery, approved",
+    "createdAt": "2025-07-11T21:10:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-019",
-    "title": "Window Shopping",
-    "description": "Browse luxury items online. Send Me screenshots and describe how owning them is not for you, but for Me.",
+    "title": "Luxury Longing",
+    "description": "Browse a luxury store online. Pick 5 things you can’t afford but I deserve. Send the links with a message admitting you’re unworthy.",
     "type": "tribute",
     "deadline": "weekly-sunday-14:00",
     "priority": "low",
-    "reward": "Reinforcement of your position",
-    "createdAt": "2025-07-11T17:55:00Z",
+    "reward": "Crushing inadequacy",
+    "createdAt": "2025-07-11T21:11:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-020",
-    "title": "Apology Letter",
-    "description": "Write Me a formal apology letter for ever questioning My authority, even mentally.",
+    "title": "Formal Apology for Being Trash",
+    "description": "Write Me a letter apologizing for being a financial disappointment and emotional burden. Use the words: pathetic, failure, disposable.",
     "type": "punishment",
     "deadline": "weekly-saturday-16:00",
     "priority": "high",
-    "reward": "Possibly accepted, likely discarded",
-    "createdAt": "2025-07-11T18:00:00Z",
+    "reward": "Possible ridicule",
+    "createdAt": "2025-07-11T21:12:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
     "id": "task-021",
-    "title": "Shame Playlist",
-    "description": "Create a public music playlist titled 'Songs My Goddess Would Hate Me For'. Share the link.",
+    "title": "Humiliation Playlist",
+    "description": "Create a Spotify or YouTube playlist titled 'Owned by My Goddess'. Fill it with songs that reflect your inferiority. Share it publicly.",
     "type": "behavior",
     "deadline": "weekly-tuesday-13:00",
     "priority": "low",
-    "reward": "Public embarrassment",
-    "createdAt": "2025-07-11T18:05:00Z",
+    "reward": "Public proof of servitude",
+    "createdAt": "2025-07-11T21:13:00Z",
     "expiresAt": "2025-12-31T23:59:59Z"
   },
   {
-    "id
+    "id": "task-022",
+    "title": "Silent Obsession",
+    "description": "Stay silent for 1 hour and repeat in your mind: 'She is everything, I am nothing.' Log how many times you said it. Submit your count.",
+    "type": "behavior",
+    "deadline": "weekly-wednesday-17:00",
+    "priority": "medium",
+    "reward": "Deeper brainwashing",
+    "createdAt": "2025-07-11T21:14:00Z",
+    "expiresAt": "2025-12-31T23:59:59Z"
+  }
+]
